Change phl admin

--- a/templates/dashboard/errorProdLog.html
+++ b/templates/dashboard/errorProdLog.html
@@ -38,10 +38,10 @@
                     {{ eachProdError.inspectorName }}
                 </td>
                 <td>
-                    {{ eachProdError.jobNumber.machNo }}
+                    {{ eachProdError.machNo }}
                 </td>
                 <td>
-                    {{ eachProdError.jobNumber.item.item_Description }}
+                    {{ eachProdError.item_Description }}
                 </td>
                 <td>
                     {{ eachProdError.descEvent }}
