--- a/templates/dashboard/inspectionTable.html
+++ b/templates/dashboard/inspectionTable.html
@@ -1,7 +1,7 @@
 {% if value %}
     <div class="panel panel-default">
         <div class="panel-heading clearfix">
-            <h3 class="panel-title pull-left"> {{ value.mattecInfo.machNo }} - {{ value.mattecInfo.item_Desc }} </h3>
+            <h3 class="panel-title pull-left"> {{ value.mattecInfo.machNo }} - {{ value.mattecInfo.itemDesc }} </h3>
         </div>
     <div class="panel-body">
         <table class="table table-hover">
