save off old migrations

--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -20,7 +20,7 @@
             <li><a href="/equipment/">Equipment</a></li>
             <li><a href="/dashboard/errorLog/">Error Log</a></li>
             <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>
-{#            <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>#}
+            <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>
                 <li><a href="/logout">Log out</a></li>
             {% endif %}
         </ul>
