--- a/templates/phl/reports/phl.html
+++ b/templates/phl/reports/phl.html
@@ -31,9 +31,11 @@
 
                 {% with value.phl as PHL %}
                     <div class="panel panel-default">
+                    <div class="panel-heading clearfix">
+                        <h3 class="panel-title pull-left"> Production History Log</h3>
+                    </div>
                         <div class="panel-body">
                             <table class="table table-hover">
-                                <caption style="text-align:center">Production History Log</caption>
                                 <thead>
                                 <tr>
                                     <th>Inspector Name</th>
