Prepare to modify report pdf

--- a/templates/inspection/subTemplates/subComments.html
+++ b/templates/inspection/subTemplates/subComments.html
@@ -19,7 +19,7 @@
                         <tr>
                             {% if useJobNo %} <td> {{ ep.jobNumber }} </td> {% endif %}
                             <td>
-                                {{ ep.inspectorName }}
+                                {{ ep.inspectorName__EmpLMName }}
                             </td>
                             <td>
                                 {{ ep.dateCreated }}
