--- a/templates/phl/reports/phl.html
+++ b/templates/phl/reports/phl.html
@@ -47,7 +47,7 @@
                                 {% for ep in PHL %}
                                     <tr>
                                         <td>
-                                            {{ ep.inspectorName }}
+                                            {{ ep.inspectorName__EmpLMName }}
                                         </td>
                                         <td>
                                             {{ ep.dateCreated }}
