--- a/templates/inspection/reports/jobReport.html
+++ b/templates/inspection/reports/jobReport.html
@@ -26,7 +26,7 @@
 <div class="col-sm-10 bootcards-cards">
     {% include "reportHeaderFooter/reportHeader.html" %}
     {% include "inspection/subTemplates/subJobInfo.html" %}
-    {% include "inspection/subTemplates/sub_error_bar_chart.html" %}
+    {% include "inspection/subTemplates/js_helpers/../subTemplates/sub_error_bar_chart.html" %}
     {% include "inspection/subTemplates/subSummary.html" %}
     {% include "inspection/subTemplates/subComments.html" %}
 
@@ -35,4 +35,4 @@
 </body>
 </html>
 
-{% include "inspection/subTemplates/sub_error_bar_chart_js.html" %}
+{% include "inspection/subTemplates/js_helpers/../subTemplates/sub_error_bar_chart_js.html" %}
