--- a/templates/inspection/subTemplates/js_helpers/sub_clone.html
+++ b/templates/inspection/subTemplates/js_helpers/sub_clone.html
@@ -8,9 +8,33 @@
             var posting = $.post(current_url, made_up_shit);
             posting.done(function( data ) {
                 // open up a modal dialog
-                alert("Record saved!");
-
+{#                alert("Record saved!");#}
+            $('<div></div>').appendTo('body')
+            .html('<div><h6>Are you sure?</h6></div>')
+            .dialog({
+                modal: true,
+                title: 'Saved. Enter another?',
+                zIndex: 10000,
+                autoOpen: true,
+                width: 'auto',
+                resizable: false,
+                buttons: {
+                    Yes: function () {
+                        $(this).dialog("close");
+                        window.location.replace('/')
+                    },
+                    No: function () {
+                        $(this).dialog("close");
+                    }
+                },
+                close: function (event, ui) {
+                    $(this).remove();
+                }
             });
+            });
+
             console.log(posting);
         });
+
+
 </script>
