Prepare to modify report pdf

--- a/templates/inspection/subTemplates/js_helpers/sub_clone.html
+++ b/templates/inspection/subTemplates/js_helpers/sub_clone.html
@@ -9,7 +9,7 @@
             posting.done(function( data ) {
                 // open up a modal dialog
 {#                alert("Record saved!");#}
-            $('<div></div>').appendTo('body')
+            $('<div></div>').appendTo('form_div')
             .html('<div><h6>Are you sure?</h6></div>')
             .dialog({
                 modal: true,
