--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -17,7 +17,7 @@
             {% include "inspection/subTemplates/subJobInfo.html" %}
 
 
-    <div class="panel panel-default ">
+    <div class="panel panel-default" id="form_div">
         <div class="panel-heading clearfix">
             <h3 class="panel-title pull-left">{{ form_title }}</h3>
         </div>
