Prepare to modify report pdf

--- a/templates/inspection/subTemplates/js_helpers/sub_clone.html
+++ b/templates/inspection/subTemplates/js_helpers/sub_clone.html
@@ -8,7 +8,7 @@
             var posting = $.post(current_url, made_up_shit);
             posting.done(function( data ) {
                 // open up a modal dialog
-{#                alert("Record saved!");#}
+{#                alert("Record saved!");#}#
             $('<div></div>').appendTo('form_div')
             .html('<div><h6>Are you sure?</h6></div>')
             .dialog({
