--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -1,4 +1,5 @@
 {% load bootstrap3 %}
+{% load staticfiles %}
 
 <!DOCTYPE html>
 <html>
@@ -11,8 +12,12 @@
 <body>
 
 {% include "nav/nav.html" %}
+<script src="{% static "jquery-ui/jquery-ui.min.js" %}"></script>
+<link href="{% static "jquery-ui/jquery-ui.min.css" %}" rel="stylesheet">
+
 
 <div class="col-sm-10 bootcards-cards">
+
 
             {% include "inspection/subTemplates/subJobInfo.html" %}
 
