Fix PHL by mold

--- a/templates/phl/reports/phl_by_mold.html
+++ b/templates/phl/reports/phl_by_mold.html
@@ -22,7 +22,7 @@
             {% include "inspection/subTemplates/subJobInfo.html" %}
         {% endwith %}
 
-                {% with value.phl as PHL %}
+        {% with my_dict.phl as PHL %}
                     <div class="panel panel-default">
                     <div class="panel-heading clearfix">
                         <h3 class="panel-title pull-left"> Production History Log</h3>
