Fix mold lookup

--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -19,6 +19,7 @@
             <li><a href="/production_and_mold_history/">PHL</a></li>
             <li><a href="/equipment/">Equipment</a></li>
             <li><a href="/dashboard/errorLog/">Error Log</a></li>
+            <li><a href="/dashboard/mold_maintence_request/">Tooling Requests</a></li>
             <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>
             <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>
                 <li><a href="/logout">Log out</a></li>
