--- a/templates/phl/reports/mhl_request.html
+++ b/templates/phl/reports/mhl_request.html
@@ -17,45 +17,37 @@
 <div class="col-sm-10 bootcards-cards">
 
 
-        {% if reportList %}
-            <div class="panel panel-default">
-                    <div class="panel-heading clearfix">
-                        <h3 class="panel-title pull-left"> Mold Maintenance Request Log</h3>
-                    </div>
-                        <div class="panel-body">
-                            <table class="table table-hover">
-                                <thead>
-                                <tr>
-                                    <th>Date Createdr</th>
-                                    <th>Requestor Name</th>
-                                    <th>Mold Number</th>
-                                    <th>Workstation</th>
-                                    <th>Description</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for row in reportList %}
-                                    <tr class='clickable-row' data-href='/production_and_mold_history/mold/{{ row.moldNo }}/' >
-                                        <td> {{ row.dateCreated }}</td>
-                                        <td>
-                                            {{ row.inspectorName }}
-                                        </td>
-                                        <td>
-                                            {{ row.moldNo }}
-                                        </td>
-                                        <td>
-                                            {{ row.machNo }}
-                                        </td>
-                                        <td>
-                                            {{ row.descEvent }}
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-            {% endif %}
+    {% if reportList %}
+        <div class="panel panel-default">
+            <div class="panel-heading clearfix">
+                <h3 class="panel-title pull-left"> Mold Maintenance Request Log</h3>
+            </div>
+            <div class="panel-body">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Date Created</th>
+                        <th>Requestor Name</th>
+                        <th>Mold Number</th>
+                        <th>Workstation</th>
+                        <th>Description</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for row in reportList %}
+                        <tr class='clickable-row' data-href='/production_and_mold_history/mold/{{ row.moldNo }}/' >
+                            <td> {{ row.dateCreated }}</td>
+                            <td> {{ row.inspectorName }}  </td>
+                            <td>  {{ row.moldNo }} </td>
+                            <td> {{ row.machNo }}  </td>
+                            <td> {{ row.descEvent }}  </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    {% endif %}
 
 
 </div>
