--- a/templates/phl/reports/mhl_request.html
+++ b/templates/phl/reports/mhl_request.html
@@ -4,13 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CMG QMS - Production History Log [{{ request.user.username }}]</title>
+    <title>CMG QMS - Mold Maintenance Requests [{{ request.user.username }}]</title>
 </head>
 <body>
 
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
 
