--- a/templates/phl/reports/mhl_request.html
+++ b/templates/phl/reports/mhl_request.html
@@ -52,3 +52,11 @@
 
 </body>
 </html>
+
+<script>
+    jQuery(document).ready(function($) {
+    $(".clickable-row").click(function() {
+        window.document.location = $(this).data("href");
+    });
+});
+</script>
