Add date field to Equipment maint log

--- a/templates/equipment/forms/pm.html
+++ b/templates/equipment/forms/pm.html
@@ -38,6 +38,9 @@
 </html>
 
 
+
+
+
 {% if pm_id %}
 
 
@@ -50,3 +53,6 @@
     </script>
 
 {% endif %}
+
+
+{% include 'equipment/forms/date_picker.html' %}
