--- a/templates/equipment/reports/equipment_repair_report.html
+++ b/templates/equipment/reports/equipment_repair_report.html
@@ -40,7 +40,7 @@
                     {% for each_repair in repair_info %}
                         <tr>
                             <td>{{ each_repair.employee }}</td>
-                            <td>{{ each_repair.dateCreated }}</td>
+                            <td>{{ each_repair.Date_Performed }}</td>
                             <td>{{ each_repair.po_num }}</td>
                             <td>{{ each_repair.part_supplier }}</td>
                             <td>{{ each_repair.part_name }}</td>
