Add Date Perfomed to MHL

--- a/templates/equipment/forms/date_picker.html
+++ b/templates/equipment/forms/date_picker.html
@@ -10,7 +10,7 @@
             changeMonth: true,
             numberOfMonths: 1,
             onClose: function (selectedDate) {
-                $("#id_date_to").datepicker("option", "minDate", selectedDate);
+                $("#id_Date_Performed").datepicker("option", "minDate", selectedDate);
             }
         });
     });
