--- a/templates/phl/forms/moldForm.html
+++ b/templates/phl/forms/moldForm.html
@@ -23,3 +23,22 @@
 
 </body>
 </html>
+
+
+{% load static %}
+<link rel="stylesheet" href="{% static "jquery-ui/jquery-ui.min.css" %}">
+<script src="{% static "jquery-ui/jquery-ui.min.js" %}"></script>
+
+
+<script>
+    $(function () {
+        $("#id_Date_Performed").datepicker({
+            defaultDate: "+1w",
+            changeMonth: true,
+            numberOfMonths: 1,
+            onClose: function (selectedDate) {
+                $("#id_Date_Performed").datepicker("option", "minDate", selectedDate);
+            }
+        });
+    });
+</script>
