Add date field to Equipment maint log

--- a/templates/phl/forms/phlForm.html
+++ b/templates/phl/forms/phlForm.html
@@ -26,10 +26,11 @@
     {% endif %}
 
 
-    <p>Record a production related event.</p>
-
-
     <div class="panel panel-default ">
+
+<div class="panel-heading clearfix">
+                <h3 class="panel-title pull-left"> Production History Log </h3>
+            </div>
             {% include "project_form_templates/gen_form.html" %}
     </div>
 </div>
