--- a/templates/phl/reports/mhl.html
+++ b/templates/phl/reports/mhl.html
@@ -19,9 +19,11 @@
 
     {% if MHL %}
         <div class="panel panel-default">
+        <div class="panel-heading clearfix">
+                <h3 class="panel-title pull-left"> Mold History Log </h3>
+            </div>
             <div class="panel-body">
                 <table class="table table-hover">
-                    <caption style="text-align:center">Mold History Information</caption>
                     <thead>
                     <tr>
                         <th>Inspector Name</th>
