--- a/templates/dashboard/errorProdLog.html
+++ b/templates/dashboard/errorProdLog.html
@@ -16,9 +16,11 @@
 {% if prodErrors %}
     <div class="col-sm-10 bootcards-cards">
     <div class="panel panel-default">
+    <div class="panel-heading clearfix">
+                <h3 class="panel-title pull-left"> Production History Log </h3>
+            </div>
         <div class="panel-body">
             <table class="table table-hover">
-                <caption style="text-align:center">Production History Log</caption>
                 <thead>
                 <tr>
                     <th>Date</th>
