--- a/templates/equipment/reports/equipment_repair_report.html
+++ b/templates/equipment/reports/equipment_repair_report.html
@@ -19,9 +19,11 @@
     {% include "equipment/subTemplates/equipInfo.html" %}
     {% if repair_info %}
         <div class="panel panel-default ">
+        <div class="panel-heading clearfix">
+                <h3 class="panel-title pull-left"> Repair Information </h3>
+            </div>
             <div class="panel-body">
                 <table class="table table-hover">
-                    <caption style="text-align:center">Repair Information</caption>
                     <thead>
                     <tr>
                         <th>Mechanic</th>
