--- a/templates/phl/subtemplates/moldInfo.html
+++ b/templates/phl/subtemplates/moldInfo.html
@@ -1,8 +1,10 @@
 {% if mold_info %}
     <div class="panel panel-default">
+    <div class="panel-heading clearfix">
+                <h3 class="panel-title pull-left"> Mold Information</h3>
+            </div>
         <div class="panel-body">
             <table class="table table-hover">
-                <caption style="text-align:center">Mold Information</caption>
                 <thead>
                 <tr>
                     <th>Mold Number</th>
