--- a/templates/phl/forms/phlLookup.html
+++ b/templates/phl/forms/phlLookup.html
@@ -20,6 +20,22 @@
     </div>
 </div>
 
+    {% if activeInMattec %}
+        <div class="bootcards-list">
+            <div class="panel panel-default">
+                <div class="list-group">
+                    {% for eachActive in activeInMattec %}
+                        <a class="list-group-item"
+                           href="/production_and_mold_history/production_report/{{ eachActive.jobNumber }}">
+                            <h4 class="list-group-item-heading">{{ eachActive.machNo }}</h4>
+                            <p class="list-group-item-text">{{ eachActive.itemDesc }} </p>
+                        </a>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
 
 </body>
 </html>
