map all items in range list to float

--- a/templates/inspection/reports/jobReport.html
+++ b/templates/inspection/reports/jobReport.html
@@ -36,3 +36,5 @@
 </html>
 
 {% include "inspection/subTemplates/js_helpers/sub_error_bar_chart_js.html" %}
+
+{% include "inspection/subTemplates/js_helpers/collapse_tables.html" %}
