--- a/templates/inspection/subTemplates/js_helpers/collapse_tables.html
+++ b/templates/inspection/subTemplates/js_helpers/collapse_tables.html
@@ -1,5 +1,5 @@
 <script>
     $('thead').click(function(){
-        $(this).siblings.toggle();
+        $(this).siblings().toggle();
     })
 </script>
