--- a/templates/inspection/subTemplates/subRangeInspection.html
+++ b/templates/inspection/subTemplates/subRangeInspection.html
@@ -5,7 +5,7 @@
                 </div>
             <div class="panel-body">
                 <table class="table table-hover">
-                    <thead>
+                    <thead id={{ key }}>
                     <tr>
                         <th>Machine Operator</th>
                         <th>Inspector</th>
