--- a/templates/inspection/subTemplates/subTextInspection.html
+++ b/templates/inspection/subTemplates/subTextInspection.html
@@ -6,7 +6,7 @@
             </div>
             <div class="panel-body">
                 <table class="table table-hover">
-                    <thead>
+                    <thead id={{ key }}>
                     <tr>
                         <th>Machine Operator</th>
                         <th>Inspector</th>
