--- a/templates/inspection/subTemplates/subTextInspection.html
+++ b/templates/inspection/subTemplates/subTextInspection.html
@@ -6,8 +6,8 @@
             </div>
             <div class="panel-body">
                 <table class="table table-hover">
-                    <thead id={{ key }}>
-                    <tr>
+                    <thead>
+                    <tr id={{ key }}>
                         <th>Machine Operator</th>
                         <th>Inspector</th>
                         <th>Date</th>
