--- a/templates/inspection/subTemplates/subComments.html
+++ b/templates/inspection/subTemplates/subComments.html
@@ -7,7 +7,7 @@
             <div class="panel-body">
                 <table class="table table-hover">
                     <thead>
-                    <tr>
+                    <tr id="phl">
                         {% if useJobNo %} <th> Job Number </th> {% endif %}
                         <th>Inspector Name</th>
                         <th>Date Created</th>
