--- a/templates/inspection/subTemplates/subPFItemSummary.html
+++ b/templates/inspection/subTemplates/subPFItemSummary.html
@@ -6,7 +6,7 @@
     <div class="panel-body">
         <table class="table table-hover">
             <thead>
-            <tr id={{ key }}>
+            <tr id={{ pfSummaryDict.html_id }}>
                 <th>Job Number</th>
                 <th>Total Inspections</th>
                 <th>Pass</th>
