--- a/templates/inspection/subTemplates/subTextInspectionIR.html
+++ b/templates/inspection/subTemplates/subTextInspectionIR.html
@@ -7,7 +7,7 @@
             <div class="panel-body">
                 <table class="table table-hover">
                     <thead>
-                    <tr id={{ key }}>
+                    <tr id={{ value.html_id }}>
                         <th>Job Number</th>
                         <th>Machine Operator</th>
                         <th>Inspector</th>
