--- a/templates/inspection/reports/partReport.html
+++ b/templates/inspection/reports/partReport.html
@@ -58,7 +58,7 @@
 
 <script>
 $(function() {
-    var collapse_list = {{ collapse_list|safe }};
+    var collapse_list = {{ partDict.collapse_list|safe }};
     for (var i = 0; i < collapse_list.length; i++) {
         $(collapse_list[i]).click();
     }
