Add validator for model field

--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -54,3 +54,5 @@
 {% endif %}
 
 {% include "inspection/subTemplates/js_helpers/sub_clone.html" %}
+
+{% include "inspection/subTemplates/js_helpers/check_head_cav.html" %}
