--- a/templates/inspection/subTemplates/js_helpers/check_head_cav.html
+++ b/templates/inspection/subTemplates/js_helpers/check_head_cav.html
@@ -6,7 +6,7 @@
 </script>
 
 <script>
-    function isValidHeadCav(heav_cav_id) {
+    function isValidHeadCav(head_cav_id) {
         var pattern = /[a-zA-Z]\s*-\s*\d{1,3}|[a-zA-Z]\s*-\s*all|\d{1,3}|all|none/;
     return pattern.test(head_cav_id);
     }
