--- a/templates/inspection/subTemplates/subPFInspection.html
+++ b/templates/inspection/subTemplates/subPFInspection.html
@@ -30,7 +30,7 @@
                             <td>
                                 {{ ep.inspectionResult|yesno:"Pass,Fail,Fail" }}
                             </td>
-                            <td> {{ ep.headCavID }}</td>
+                            <td> {{ ep.headCavID|default_if_none:"None" }}</td>
                             <td>  {% for dt in ep.defectType.all %} {{ dt.passFail }}. <br> {% endfor %}  </td>
                         </tr>
                     {% endfor %}
