--- a/templates/equipment/forms/pm.html
+++ b/templates/equipment/forms/pm.html
@@ -22,6 +22,8 @@
     <div class="panel panel-default ">
         <div class="panel-body">
             {% include "project_form_templates/gen_form.html" %}
+            {% bootstrap_button "Clone Me" button_class="btn-primary" name="clone_me" %}
+
             </div>
     </div>
 
@@ -56,3 +58,42 @@
 
 
 {% include 'equipment/forms/date_picker.html' %}
+
+<script>
+        $("button[name='clone_me']").click(function() {
+            var current_url = $(location).attr('href');
+            var made_up_shit = $("form").serializeArray();
+
+
+            var posting = $.post(current_url, made_up_shit);
+            posting.done(function( data ) {
+                // open up a modal dialog
+{#                alert("Record saved!");#}
+            $('<div></div>')
+            .html('<div><h6>Do you want to enter another PM?</h6></div>')
+            .dialog({
+                modal: true,
+                title: 'Repeat PM for Another Machine?',
+                zIndex: 10000,
+                autoOpen: true,
+                width: 'auto',
+                resizable: false,
+                buttons: {
+                    Yes: function () {
+                        $(this).dialog("close");
+                    },
+                    No: function () {
+                        $(this).dialog("close");
+                        window.location.replace('/equipment/')
+                    }
+                },
+                close: function (event, ui) {
+                    $(this).remove();
+                }
+            });
+            });
+
+            console.log(posting);
+        });
+
+</script>
