--- a/templates/phl/forms/moldForm.html
+++ b/templates/phl/forms/moldForm.html
@@ -31,14 +31,11 @@
 
 
 <script>
-    $(function () {
-        $("#id_Date_Performed").datepicker({
-            defaultDate: "+1w",
-            changeMonth: true,
-            numberOfMonths: 1,
-            onClose: function (selectedDate) {
-                $("#id_Date_Performed").datepicker("option", "minDate", selectedDate);
-            }
+    $(function() {
+        $( "#id_Date_Performed" ).datepicker({
+          defaultDate: new Date(),
+          changeMonth: true,
+          changeYear: true
         });
-    });
+  });
 </script>
