Save many to many

--- a/templates/equipment/forms/pm.html
+++ b/templates/equipment/forms/pm.html
@@ -9,8 +9,8 @@
 <body>
 
 {% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
+{% load staticfiles %}
+
 
 {% include "nav/nav.html" %}
 
