--- a/templates/equipment/forms/date_picker.html
+++ b/templates/equipment/forms/date_picker.html
@@ -1,7 +1,7 @@
 {% load static %}
 <script src="{% static "jquery-ui/external/jquery/jquery.js" %}"></script>
 <script src="{% static "jquery-ui/jquery-ui.min.js" %}"></script>
-<script src="{% static "jquery-ui/jquery-ui.min.css" %}"></script>
+<link href="{% static "jquery-ui/jquery-ui.min.css" %}" rel="stylesheet">
 
 <script>
     $(function() {
