--- a/templates/phl/forms/moldForm.html
+++ b/templates/phl/forms/moldForm.html
@@ -26,16 +26,16 @@
 
 
 {% load static %}
-<link rel="stylesheet" href="{% static "jquery-ui/jquery-ui.min.css" %}">
+<script src="{% static "jquery-ui/external/jquery/jquery.js" %}"></script>
 <script src="{% static "jquery-ui/jquery-ui.min.js" %}"></script>
-
+<link href="{% static "jquery-ui/jquery-ui.min.css" %}" rel="stylesheet">
 
 <script>
     $(function() {
-        $( "#id_Date_Performed" ).datepicker({
-          defaultDate: new Date(),
-          changeMonth: true,
-          changeYear: true
-        });
+    $( "#id_Date_Performed" ).datepicker({
+      defaultDate: new Date(),
+      changeMonth: true,
+      changeYear: true
+    });
   });
 </script>
