Fix jquery stuff

--- a/templates/phl/forms/moldForm.html
+++ b/templates/phl/forms/moldForm.html
@@ -37,11 +37,6 @@
       defaultDate: new Date(),
       changeMonth: true,
       changeYear: true
-    });
+    }).datepicker("setDate", new Date());;
   });
-</script>
-
-<script>
-    var today = new Date();
-    $('#id_Date_Performed').attr('value', today);
 </script>
