Fix jquery stuff

--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -56,3 +56,7 @@
 {% include "inspection/subTemplates/js_helpers/sub_clone.html" %}
 
 {% include "inspection/subTemplates/js_helpers/check_head_cav.html" %}
+
+<script>
+    $("#_machineOperator").val({{ machine_operator }})
+</script>
