Fix jquery stuff

--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -58,5 +58,5 @@
 {% include "inspection/subTemplates/js_helpers/check_head_cav.html" %}
 
 <script>
-    $("#_machineOperator").val({{ machine_operator }})
+    $("#id_machineOperator").val({{ machine_operator }})
 </script>
