Fix jquery stuff

--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -59,7 +59,7 @@
 
 {% if machine_operator %}
     <script>
-        $("#id_machineOperator").val({{ machine_operator }})
+        $("#id_machineOperator").val("{{ machine_operator }}")
     </script>
 {% endif %}
 
