--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -5,11 +5,80 @@
 <link href="{% static "bootcard/css/bootcards-desktop.min.css" %}" rel="stylesheet">
 {#<link href="{% static "simple-sidebar/simple-sidebar.css"%}" rel="stylesheet">#}
 
+{##}
+{#<div class="col-sm-2 hidden-xs">#}
+{#    <div class="docs-menu affix">#}
+{#        <ul class="nav nav-pills nav-stacked">#}
+{#            {% if user.is_authenticated %}#}
+{#                Welcome, {{ request.user.username }}#}
+{#            <li><a href="/">Home</a></li>#}
+{#            <li><a href="/startupshot/">Startup Shot</a></li>#}
+{#            <li><a href="/startupshot/view">Startup Shot Report</a></li>#}
+{#            <li><a href="/inspection/">Inspection</a></li>#}
+{#            <li><a href="/inspection/itemReport/">Part Report</a></li>#}
+{#            <li><a href="/inspection/jobReport/">Job Report</a></li>#}
+{#            <li><a href="/production_and_mold_history/">PHL</a></li>#}
+{#            <li><a href="/equipment/">Equipment</a></li>#}
+{#            <li><a href="/dashboard/errorLog/">Error Log</a></li>#}
+{#            <li><a href="/production_and_mold_history/mold_maintence_request/">Tooling Requests</a></li>#}
+{#            <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>#}
+{#            <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>#}
+{#                <li><a href="/logout">Log out</a></li>#}
+{#            {% endif %}#}
+{#        </ul>#}
+{#    </div>#}
+{#</div>#}
+
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <button type="button" class="btn btn-default btn-back navbar-left pull-left hidden " onclick="history.back()">
+      <i class="fa fa-lg fa-chevron-left"></i>
+      <span>Back</span>
+    </button>
+    <button type="button" class="btn btn-default btn-menu navbar-left pull-left offcanvas-toggle">
+      <i class="fa fa-lg fa-bars"></i>
+      <span>Menu</span>
+    </button>
+    <a class="navbar-brand" title="Customers v{{getAppVersion}}" href="/">Customers</a>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="active">
+          <a href="#">
+            <i class="fa fa-users"></i>
+            Contacts
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-building-o"></i>
+            Companies
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-gears"></i>
+            Settings
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
 
 <div class="col-sm-2 hidden-xs">
     <div class="docs-menu affix">
         <ul class="nav nav-pills nav-stacked">
             {% if user.is_authenticated %}
+                Welcome, {{ request.user.username }}
             <li><a href="/">Home</a></li>
             <li><a href="/startupshot/">Startup Shot</a></li>
             <li><a href="/startupshot/view">Startup Shot Report</a></li>
@@ -27,6 +96,9 @@
         </ul>
     </div>
 </div>
+
+
+
 
 
 <script src="{% static "jquery/jquery.js" %}"></script>
