--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -47,25 +47,39 @@
       <i class="fa fa-lg fa-bars"></i>
       <span>Menu</span>
     </button>
-    <a class="navbar-brand" title="Customers v{{getAppVersion}}" href="/">Customers</a>
+    <a class="navbar-brand" href="/">QMS</a>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active">
-          <a href="#">
-            <i class="fa fa-users"></i>
-            Contacts
-          </a>
-        </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+              <i class="fa fa-fw fa-dashboard"></i>
+              Inspections<span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="#"><i class="fa fa-fw fa-envelope-o"></i>Record: Startup Shot</a></li>
+                <li><a href="#"><i class="fa fa-fw fa-file-o"></i>Record: Inspection</a></li>
+                <li class="divider">Reports</li>
+                <li><a href="#"><i class="fa fa-fw fa-bar-chart-o"></i>Report: Startup Shot Report</a></li>
+                <li><a href="#"><i class="fa fa-fw fa-bar-chart-o"></i>Report: Part</a></li>
+                <li><a href="#"><i class="fa fa-fw fa-bar-chart-o"></i>Report: Job</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-fw fa-briefcase"></i>
+              PHL
+            </a>
+          </li>
         <li>
           <a href="#">
-            <i class="fa fa-building-o"></i>
-            Companies
+            <i class="fa fa-gears"></i>
+            Equipment
           </a>
         </li>
         <li>
           <a href="#">
             <i class="fa fa-gears"></i>
-            Settings
+            Dashboard Tools
           </a>
         </li>
       </ul>
