--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -58,7 +58,7 @@
             <ul class="dropdown-menu" role="menu">
                 <li><a href="#"><i class="fa fa-fw fa-envelope-o"></i>Record: Startup Shot</a></li>
                 <li><a href="#"><i class="fa fa-fw fa-file-o"></i>Record: Inspection</a></li>
-                <li class="divider">Reports</li>
+                <li class="divider"></li>
                 <li><a href="#"><i class="fa fa-fw fa-bar-chart-o"></i>Report: Startup Shot Report</a></li>
                 <li><a href="#"><i class="fa fa-fw fa-bar-chart-o"></i>Report: Part</a></li>
                 <li><a href="#"><i class="fa fa-fw fa-bar-chart-o"></i>Report: Job</a></li>
