--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -49,7 +49,7 @@
     </button>
     <a class="navbar-brand" href="/">QMS</a>
     <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav bootcards-nav-primary">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
               <i class="fa fa-fw fa-dashboard"></i>
