--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -3,6 +3,12 @@
 
 <link href="{% static "bootstrap/bootstrap.min.css" %}" rel="stylesheet">
 <link href="{% static "bootcard/css/bootcards-desktop.min.css" %}" rel="stylesheet">
+
+
+<script src="{% static "jquery/jquery.js" %}"></script>
+<script src="{% static "bootstrap/bootstrap.min.js" %}"></script>
+<script src="{% static "bootcard/js/bootcards.min.js" %}"></script>
+
 {#<link href="{% static "simple-sidebar/simple-sidebar.css"%}" rel="stylesheet">#}
 
 {##}
@@ -56,29 +62,26 @@
               Inspections<span class="caret"></span>
             </a>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="#"><i class="fa fa-fw fa-envelope-o"></i>Record: Startup Shot</a></li>
-                <li><a href="#"><i class="fa fa-fw fa-file-o"></i>Record: Inspection</a></li>
+                <li><a href="#">Record: Startup Shot</a></li>
+                <li><a href="#">Record: Inspection</a></li>
                 <li class="divider"></li>
-                <li><a href="#"><i class="fa fa-fw fa-bar-chart-o"></i>Report: Startup Shot Report</a></li>
-                <li><a href="#"><i class="fa fa-fw fa-bar-chart-o"></i>Report: Part</a></li>
-                <li><a href="#"><i class="fa fa-fw fa-bar-chart-o"></i>Report: Job</a></li>
+                <li><a href="#">Report: Startup Shot Report</a></li>
+                <li><a href="#">Report: Part</a></li>
+                <li><a href="#">Report: Job</a></li>
             </ul>
           </li>
           <li>
             <a href="#">
-              <i class="fa fa-fw fa-briefcase"></i>
               PHL
             </a>
           </li>
         <li>
           <a href="#">
-            <i class="fa fa-gears"></i>
             Equipment
           </a>
         </li>
         <li>
           <a href="#">
-            <i class="fa fa-gears"></i>
             Dashboard Tools
           </a>
         </li>
@@ -114,9 +117,5 @@
 
 
 
-
-<script src="{% static "jquery/jquery.js" %}"></script>
-<script src="{% static "bootstrap/bootstrap.min.js" %}"></script>
-<script src="{% static "bootcard/js/bootcards.min.js" %}"></script>
 
 {#added production log now #}
