--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -57,7 +57,7 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav bootcards-nav-primary">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-fw fa-dashboard"></i>
               Inspections<span class="caret"></span>
             </a>
