--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -35,60 +35,52 @@
 {#    </div>#}
 {#</div>#}
 
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-    <button type="button" class="btn btn-default btn-back navbar-left pull-left hidden " onclick="history.back()">
-      <i class="fa fa-lg fa-chevron-left"></i>
-      <span>Back</span>
-    </button>
-    <button type="button" class="btn btn-default btn-menu navbar-left pull-left offcanvas-toggle">
-      <i class="fa fa-lg fa-bars"></i>
-      <span>Menu</span>
-    </button>
-    <a class="navbar-brand" href="/">QMS</a>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav bootcards-nav-primary">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Inspections<span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Record: Startup Shot</a></li>
-                <li><a href="#">Record: Inspection</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Report: Startup Shot Report</a></li>
-                <li><a href="#">Report: Part</a></li>
-                <li><a href="#">Report: Job</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">
-              PHL
-            </a>
-          </li>
-        <li>
-          <a href="#">
-            Equipment
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Dashboard Tools
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
 
+{% if user.is_authenitcated %}
+
+<div class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle"
+                        data-toggle="collapse" data-target="#qms-navbar" >
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-brand">QMS</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="qms-navbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Dashboards <b class="caret"></b> </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="downloads">Inspection Log</a></li>
+                            <li><a href="downloads">Error Log</a></li>
+                            <li><a href="downloads">Tooling Requests</a></li>
+                        </ul>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Inspections <b class="caret"></b> </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="downloads">Record: Startup Shot</a></li>
+                            <li><a href="downloads">Record: Inspection</a></li>
+                            <li><a href="downloads">Report: Startup Shot</a></li>
+                            <li class="divider"></li>
+                            <li><a href="downloads">Record: Part</a></li>
+                            <li><a href="downloads">Record: Job</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">PHL</a></li>
+                    <li><a href="#">Equipment</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+{% endif %}
 
 <div class="col-sm-2 hidden-xs">
     <div class="docs-menu affix">
