--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -36,50 +36,49 @@
 {#</div>#}
 
 
-{% if user.is_authenitcated %}
+{% if user.is_authenticated %}
+    <div class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle"
+                            data-toggle="collapse" data-target="#qms-navbar" >
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="#" class="navbar-brand">QMS</a>
+                </div>
 
-<div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle"
-                        data-toggle="collapse" data-target="#qms-navbar" >
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#" class="navbar-brand">QMS</a>
+                <div class="collapse navbar-collapse" id="qms-navbar">
+                    <ul class="nav navbar-nav">
+                        <li><a href="/">Home</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Dashboards <b class="caret"></b> </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="downloads">Inspection Log</a></li>
+                                <li><a href="downloads">Error Log</a></li>
+                                <li><a href="downloads">Tooling Requests</a></li>
+                            </ul>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Inspections <b class="caret"></b> </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="downloads">Record: Startup Shot</a></li>
+                                <li><a href="downloads">Record: Inspection</a></li>
+                                <li><a href="downloads">Report: Startup Shot</a></li>
+                                <li class="divider"></li>
+                                <li><a href="downloads">Record: Part</a></li>
+                                <li><a href="downloads">Record: Job</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">PHL</a></li>
+                        <li><a href="#">Equipment</a></li>
+                    </ul>
+                </div>
+
             </div>
-
-            <div class="collapse navbar-collapse" id="qms-navbar">
-                <ul class="nav navbar-nav">
-                    <li><a href="/">Home</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Dashboards <b class="caret"></b> </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="downloads">Inspection Log</a></li>
-                            <li><a href="downloads">Error Log</a></li>
-                            <li><a href="downloads">Tooling Requests</a></li>
-                        </ul>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Inspections <b class="caret"></b> </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="downloads">Record: Startup Shot</a></li>
-                            <li><a href="downloads">Record: Inspection</a></li>
-                            <li><a href="downloads">Report: Startup Shot</a></li>
-                            <li class="divider"></li>
-                            <li><a href="downloads">Record: Part</a></li>
-                            <li><a href="downloads">Record: Job</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">PHL</a></li>
-                    <li><a href="#">Equipment</a></li>
-                </ul>
-            </div>
-
         </div>
-    </div>
 {% endif %}
 
 <div class="col-sm-2 hidden-xs">
