--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -1,38 +1,12 @@
 {% load staticfiles %}
 
-<script src="{% static "jquery/jquery.js" %}"></script>
-<script src="{% static "bootstrap/bootstrap.min.js" %}"></script>
-<script src="{% static "bootcard/js/bootcards.min.js" %}"></script>
-
 <link href="{% static "bootstrap/bootstrap.min.css" %}" rel="stylesheet">
 <link href="{% static "bootcard/css/bootcards-desktop.min.css" %}" rel="stylesheet">
 
 
-{#<link href="{% static "simple-sidebar/simple-sidebar.css"%}" rel="stylesheet">#}
-
-{##}
-{#<div class="col-sm-2 hidden-xs">#}
-{#    <div class="docs-menu affix">#}
-{#        <ul class="nav nav-pills nav-stacked">#}
-{#            {% if user.is_authenticated %}#}
-{#                Welcome, {{ request.user.username }}#}
-{#            <li><a href="/">Home</a></li>#}
-{#            <li><a href="/startupshot/">Startup Shot</a></li>#}
-{#            <li><a href="/startupshot/view">Startup Shot Report</a></li>#}
-{#            <li><a href="/inspection/">Inspection</a></li>#}
-{#            <li><a href="/inspection/itemReport/">Part Report</a></li>#}
-{#            <li><a href="/inspection/jobReport/">Job Report</a></li>#}
-{#            <li><a href="/production_and_mold_history/">PHL</a></li>#}
-{#            <li><a href="/equipment/">Equipment</a></li>#}
-{#            <li><a href="/dashboard/errorLog/">Error Log</a></li>#}
-{#            <li><a href="/production_and_mold_history/mold_maintence_request/">Tooling Requests</a></li>#}
-{#            <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>#}
-{#            <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>#}
-{#                <li><a href="/logout">Log out</a></li>#}
-{#            {% endif %}#}
-{#        </ul>#}
-{#    </div>#}
-{#</div>#}
+<script src="{% static "jquery/jquery.js" %}"></script>
+<script src="{% static "bootstrap/bootstrap.min.js" %}"></script>
+<script src="{% static "bootcard/js/bootcards.min.js" %}"></script>
 
 
 {% if user.is_authenticated %}
@@ -45,7 +19,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand">QMS</a>
+                    <a href="#" class="navbar-brand">QMS - {{ request.user.username }}</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="qms-navbar">
@@ -79,29 +53,29 @@
             </div>
         </div>
 {% endif %}
-
-<div class="col-sm-2 hidden-xs">
-    <div class="docs-menu affix">
-        <ul class="nav nav-pills nav-stacked">
-            {% if user.is_authenticated %}
-                Welcome, {{ request.user.username }}
-            <li><a href="/">Home</a></li>
-            <li><a href="/startupshot/">Startup Shot</a></li>
-            <li><a href="/startupshot/view">Startup Shot Report</a></li>
-            <li><a href="/inspection/">Inspection</a></li>
-            <li><a href="/inspection/itemReport/">Part Report</a></li>
-            <li><a href="/inspection/jobReport/">Job Report</a></li>
-            <li><a href="/production_and_mold_history/">PHL</a></li>
-            <li><a href="/equipment/">Equipment</a></li>
-            <li><a href="/dashboard/errorLog/">Error Log</a></li>
-            <li><a href="/production_and_mold_history/mold_maintence_request/">Tooling Requests</a></li>
-            <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>
-            <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>
-                <li><a href="/logout">Log out</a></li>
-            {% endif %}
-        </ul>
-    </div>
-</div>
+{##}
+{#<div class="col-sm-2 hidden-xs">#}
+{#    <div class="docs-menu affix">#}
+{#        <ul class="nav nav-pills nav-stacked">#}
+{#            {% if user.is_authenticated %}#}
+{#                Welcome, {{ request.user.username }}#}
+{#            <li><a href="/">Home</a></li>#}
+{#            <li><a href="/startupshot/">Startup Shot</a></li>#}
+{#            <li><a href="/startupshot/view">Startup Shot Report</a></li>#}
+{#            <li><a href="/inspection/">Inspection</a></li>#}
+{#            <li><a href="/inspection/itemReport/">Part Report</a></li>#}
+{#            <li><a href="/inspection/jobReport/">Job Report</a></li>#}
+{#            <li><a href="/production_and_mold_history/">PHL</a></li>#}
+{#            <li><a href="/equipment/">Equipment</a></li>#}
+{#            <li><a href="/dashboard/errorLog/">Error Log</a></li>#}
+{#            <li><a href="/production_and_mold_history/mold_maintence_request/">Tooling Requests</a></li>#}
+{#            <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>#}
+{#            <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>#}
+{#                <li><a href="/logout">Log out</a></li>#}
+{#            {% endif %}#}
+{#        </ul>#}
+{#    </div>#}
+{#</div>#}
 
 
 
